GPv3+GeoNode: Crashes if points were assigned to a Vertex Group #117997

Closed
opened 2024-02-08 16:15:25 +01:00 by luckyrobster · 4 comments

System Information
Operating system: Linux-6.5.0-14-generic-x86_64-with-glibc2.38 64 Bits, X11 UI
Graphics card: NVIDIA GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.147.05

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-02-07 23:12, hash: 412b279629af
Worked: N/A

Short description of error
Uuurgghh!! Another one.
If the points were assigned to a vertex group and doing something with Geo Node, crashed.

Exact steps for others to reproduce the error

  1. Insert a blank Grease Pencil (v3) object
  2. Go to 'Edit Mode' and select any point
  3. In Grease Pencil Data panel, make a new Vertex Group and assign the selected point(s)
  4. Make a new Geo Node and add any node to connect to GP's output
**System Information** Operating system: Linux-6.5.0-14-generic-x86_64-with-glibc2.38 64 Bits, X11 UI Graphics card: NVIDIA GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.147.05 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-02-07 23:12, hash: `412b279629af` Worked: N/A **Short description of error** Uuurgghh!! Another one. If the points were assigned to a vertex group and doing something with Geo Node, crashed. **Exact steps for others to reproduce the error** 1. Insert a blank Grease Pencil (v3) object 2. Go to 'Edit Mode' and select any point 3. In Grease Pencil Data panel, make a new Vertex Group and assign the selected point(s) 4. Make a new Geo Node and add any node to connect to GP's output
luckyrobster added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-02-08 16:15:26 +01:00
Member

Hi, thanks for the report. Can confirm the assert/crash.

Last frame(s) in the video 😆 😅

cc @filedescriptor

Hi, thanks for the report. Can confirm the assert/crash. Last frame(s) in the video 😆 😅 cc @filedescriptor
Falk David added this to the Grease Pencil project 2024-02-09 10:38:36 +01:00
Member

Raising the prio here since it is a crasher (and not an unlikely one to run into)

Raising the prio here since it is a crasher (and not an unlikely one to run into)
Philipp Oeser added
Priority
High
and removed
Priority
Normal
labels 2024-02-12 14:05:28 +01:00

Is anybody working on this?

Is anybody working on this?
Member

Hi, maybe Falk? But you've a fix already, feel free to create a PR and add Falk as reviewer :)

Hi, maybe Falk? But you've a fix already, feel free to create a PR and add Falk as reviewer :)
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-11 20:52:27 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#117997
No description provided.